<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>tsp.headdb</groupId>
    <artifactId>HeadDB</artifactId>
    <version>5.0.0</version>
    <packaging>jar</packaging>

    <name>HeadDB</name>
    <description>Database with thousands of heads</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <build.author>TheSilentPro (Silent)</build.author>
        <build.timestamp>${maven.build.timestamp}</build.timestamp>
    </properties>

    <scm>
        <connection>scm:git:git@github.com:TheSilentPro/HeadDB.git</connection>
        <developerConnection>scm:git:git@github.com:TheSilentPro/HeadDB.git</developerConnection>
        <url>git@github.com:TheSilentPro/HeadDB.git</url>
    </scm>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>mojang-repo</id>
            <url>https://libraries.minecraft.net/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>CodeMC</id>
            <url>https://repo.codemc.org/repository/maven-public</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Hard Dependencies (Provided) -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.19.2-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>authlib</artifactId>
            <version>1.5.21</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10</version>
            <scope>provided</scope>
        </dependency>

        <!-- Hard Dependencies (Shaded) -->
        <dependency>
            <groupId>com.github.TheSilentPro</groupId>
            <artifactId>SmartPlugin</artifactId>
            <version>e565e96a72</version>
        </dependency>
        <dependency>
            <groupId>com.github.TheSilentPro</groupId>
            <artifactId>Warehouse</artifactId>
            <version>f40f72cb19</version>
        </dependency>

        <!-- Soft Dependencies -->
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.lokka30</groupId>
            <artifactId>treasury-api</artifactId>
            <version>1.1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.1</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.name}</finalName>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <!-- Compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>

            <!-- Buildnumber -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>build-properties</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>create</goal>
                            <goal>create-metadata</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doCheck>true</doCheck>
                    <doUpdate>true</doUpdate>

                    <buildNumberPropertiesFileLocation>${basedir}/build/buildNumber.properties</buildNumberPropertiesFileLocation>
                    <outputDirectory>${basedir}/build</outputDirectory>
                    <outputName>build.properties</outputName>

                    <useLastCommittedRevision>true</useLastCommittedRevision>
                    <shortRevisionLength>7</shortRevisionLength>
                    <revisionOnScmFailure>0</revisionOnScmFailure>
                    <items>
                        <item>buildNumber</item>
                        <item>timestamp</item>
                        <item>scmVersion</item>
                    </items>
                </configuration>
            </plugin>

            <!-- Shade -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>tsp.headdb.HeadDB</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <id>javadoc-generate</id>
                        <phase>package</phase>
                        <goals>
                            <goal>javadoc</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <show>public</show>
                    <doclint>none</doclint>
                    <additionalDependencies>
                        <additionalDependency>
                            <groupId>org.spigotmc</groupId>
                            <artifactId>spigot-api</artifactId>
                            <version>1.19.2-R0.1-SNAPSHOT</version>
                        </additionalDependency>
                        <additionalDependency>
                            <groupId>com.github.TheSilentPro</groupId>
                            <artifactId>SmartPlugin</artifactId>
                            <version>e565e96a72</version>
                        </additionalDependency>
                        <additionalDependency>
                            <groupId>com.github.TheSilentPro</groupId>
                            <artifactId>Warehouse</artifactId>
                            <version>f40f72cb19</version>
                        </additionalDependency>
                    </additionalDependencies>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>